--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "pdf-reader-test",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "main.js",
   "scripts": {
     "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "engines": {
+    "node": "20.x"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "pdf.js-extract": "^0.2.1",
     "sharp": "^0.33.5",
     "tesseract.js": "^5.1.0"
